--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "express": "^4.21.1",
     "express-validator": "^7.2.0",
+    "nodemon": "^3.1.7",
     "sequelize": "^6.37.5",
     "sqlite3": "^5.1.7"
   }
